# ResearchRover

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  diagnose_claude.command  docker-compose.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEPLOYMENT.md
docs/superpowers/plans/: 2026-05-08-paper-integrity-layer.md
docs/superpowers/specs/: 2026-05-08-paper-integrity-layer-design.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx
frontend/app/(app)/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/my-library/: page.tsx
frontend/app/papers/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/trending/: page.tsx
frontend/components/: AuthProvider.tsx  FileViewerModal.tsx  NotificationBell.tsx
frontend/components/chat/: DocumentPickerModal.tsx
frontend/components/layout/: PersonalSidebar.tsx  TopNav.tsx
frontend/lib/: api.ts
migrations/versions/versions/: bd5e3da3b8f2_merge_openreview_and_personalization_.py  d5e6f7a8b9c0_add_tech_radar_snapshots.py  e6f7a8b9c0d1_add_weekly_reports.py  f7a8b9c0d1e2_add_context_mode.py  g1h2i3j4k5l6_add_research_profile_and_user_alerts.py  h2i3j4k5l6m7_add_feed_saved_searches_user_digest.py  i3j4k5l6m7n8_add_paper_notes.py  (+1 more)
reports/: analysis_2401.12345.json  analysis_2401.12345.md
scripts/: test_osint_features.sh  tunnel.sh
src/: main.py
src/api/routers/: auth.py  authors.py  (+15 more)
src/cli/: _context.py
src/collectors/: acl_anthology.py  biorxiv.py  retraction_watch.py
src/core/: config.py
src/llm/: ollama_client.py
src/rag/: reranker.py
src/services/: notification_delivery.py  openreview_service.py  repo_ingestion.py  report_service.py  text_extractor.py
src/workers/: celery_app.py
(+64 files in other folders)
